traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:24: error: '(' expected but identifier found.
      if diag < 8 {
         ^TraversalDiagonal:30: error: illegal start of simple expression
  }
  ^